bk_ida/expected_expression/expected_expression/g2/gen
/data/output_dir/patch/sjeng/ida/gcc/O2/sjeng-gcc-O2/gen/src/moves.c:1137:32: error: expected expression
if ( !moved[110] && *( _OWORD *)( &board + 110) == __PAIR128__( 0xD0000000DLL, 0xD00000008LL) ) 
                               ^
/data/output_dir/patch/sjeng/ida/gcc/O2/sjeng-gcc-O2/gen/src/moves.c:1137:24: error: use of undeclared identifier '_OWORD'
if ( !moved[110] && *( _OWORD *)( &board + 110) == __PAIR128__( 0xD0000000DLL, 0xD00000008LL) ) 
                       ^
/data/output_dir/patch/sjeng/ida/gcc/O2/sjeng-gcc-O2/gen/src/moves.c:1530:31: error: expected expression
if ( !moved[26] && *( _OWORD *)( &board + 26) == __PAIR128__( 0xD0000000DLL, 0xD00000007LL) ) 
                              ^
/data/output_dir/patch/sjeng/ida/gcc/O2/sjeng-gcc-O2/gen/src/moves.c:1530:23: error: use of undeclared identifier '_OWORD'
if ( !moved[26] && *( _OWORD *)( &board + 26) == __PAIR128__( 0xD0000000DLL, 0xD00000007LL) ) 
                      ^
4 errors generated.
make: *** [/data/output_dir/patch/sjeng/ida/gcc/O2/sjeng-gcc-O2/gen/src/obj/moves.o] Error 1
